<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/welcome"
        android:layout_width="213sp"
        android:layout_height="36sp"
        android:layout_margin="20sp"
        android:layout_marginTop="35sp"
        android:text="@string/text1"
        android:textColor="#E1D8D8"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="18sp"
        android:textColor="#FFFFFFFF"
        android:text="@string/text2"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- panda1 code -->

    <ImageView
        android:id="@+id/image1"
        android:layout_width="136sp"
        android:layout_height="112sp"
        android:layout_marginTop="144dp"
        android:src="@drawable/panda1"
        android:contentDescription="@string/panda1"
        app:layout_constraintEnd_toStartOf="@+id/image2"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/welcome" />

    <!-- code for panda 2 -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124sp"
        android:text="@string/panda_text_1"
        android:textColor="#FFFFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.325"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/image1" />

    <ImageView
        android:id="@+id/image2"
        android:layout_width="136sp"
        android:layout_height="112sp"
        android:layout_marginTop="144dp"
        android:layout_weight="1"
        android:src="@drawable/panda2"
        android:contentDescription="@string/panda2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.785"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/welcome" />

    <!-- code for panda 3 -->

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:text="@string/panda1"
        android:textColor="#E81414"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.738"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/image2" />

    <ImageView
        android:id="@+id/image3"
        android:layout_width="171dp"
        android:layout_height="118dp"
        android:layout_marginTop="308dp"
        android:layout_weight="1"
        android:src="@drawable/panda2"
        android:contentDescription="@string/panda3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/welcome" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="132dp"
        android:text="@string/panda3"
        android:textColor="#AE641B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/image3" />

    <Button
        android:id="@+id/my_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="196sp"
        android:background="@drawable/circular_button"
        android:text="@string/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/image3" />





</androidx.constraintlayout.widget.ConstraintLayout>